IMPALA-4497: Fix Kudu client crash w/ SASL initialization

Kudu commit cd40d1c5126d0fd541d95370cdb2998b60f2f82c added a
call to sasl_set_mutex, which ends up in the client process
(Impala). That conflicts with Impala's SASL initialization code
resulting in a crash when the Kudu client is used to
open a connection to Kudu.

Kudu commit f2aeba6c059ea61f9cf8984d3e84d6c27b64d463
provided a method to disable the Kudu client's SASL
initialization to avoid this. This commit calls this method
on process startup.

Testing on kerberized cluster which was previously crashing.

Change-Id: Ic465c31406a6df2753f6cc7481b6b391ed5e671b
Reviewed-on: http://gerrit.cloudera.org:8080/5139
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: Internal Jenkins